--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+# Archives
 _archives/
+
+# macOS
+.DS_Store
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# Claude
+.claude/
+
+# Dependencies
+node_modules/
+npm-debug.log*
+
+# Temporary files
+*.tmp
+*.temp
+*~
